--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -303,7 +303,3 @@ header {
     color: #9b9b9b;
     text-align: center;
 }
-
-.grecaptcha-badge {
-    visibility: visible
-}
